neural networks type of learning

--- a/01 - Fundamentals/notes/1. Neural Network.md
+++ b/01 - Fundamentals/notes/1. Neural Network.md
@@ -1,1 +1,18 @@
-# Neural Network
+# Neural Networks
+
+A Neural Network is a network or circuits of Neurons, or in modern sense, an artificial neural network, composed of artifical neurons or nodes.
+
+![Neural Network](../images/NN.JPG)
+
+## Anatomy of Neural Networks
+
+1. Input Layer: where the data goes in.
+1. Hidden Layers: learn patterns in the data.
+3. Output Layer: Output learned representation or prediction probabibilities.
+
+![Anatomy of Neural Network](../images/anatomy.JPG)
+
+**NOTE:** `Patterns` is an arbitary term, you will often hear `embedding`, `weights`,`feature representation`,`feature vectors` all referring to similiar things. 
+
+## Types of Learning
+![Learning Types](../images/learning%20types.JPG)
