tensor and tensorflow

--- a/01 - Fundamentals/notes/1. Neural Network.md
+++ b/01 - Fundamentals/notes/1. Neural Network.md
@@ -16,3 +16,10 @@ A Neural Network is a network or circuits of Neurons, or in modern sense, an art
 
 ## Types of Learning
 ![Learning Types](../images/learning%20types.JPG)
+
+## Deep Learning Use Cases
+- Recommendation (Google, YouTube, NetFlix)
+- Translation
+- Speech Recognition
+- Computer Vision
+- Natural Language Processing (NLP) and so on...
