--- a/01 - Fundamentals/notes/2. TensorFlow.md
+++ b/01 - Fundamentals/notes/2. TensorFlow.md
@@ -17,3 +17,13 @@ TPU is specifically developed by Google for Neural Network Machine Learning, par
 
 ## What is a Tensor
 Tensors are some numerical ways to represent an information or data. They are numerical encoding of information or data.
+
+## TensorFlow Workflow
+![Workflow](../images/TF%20workflow.JPG)
+
+1. Getting the data ready - turning it to tensor.
+2. Build or pick a pretrained model.
+3. Fit the model to the data and make prediction.
+4. Evaluate the model.
+5. Improve through experimentation.
+6. Save and reload your trained model.
