--- a/01 - Fundamentals/code/01 - Tensorflow.ipynb
+++ b/01 - Fundamentals/code/01 - Tensorflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c6051884",
+   "id": "1e2136f8",
    "metadata": {},
    "source": [
     "# Fundamental Concepts of Tensor using TensorFlow\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0e58f69",
+   "id": "a021d860",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dd7be23c",
+   "id": "51c89335",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4a37e6f0",
+   "id": "27cf8f1f",
    "metadata": {},
    "outputs": [
     {
@@ -56,14 +56,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e775eac",
+   "id": "8eec02c6",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Creating Tensor with `tf.constant`"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "740af205",
+   "id": "4cd410cc",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ed39c6ba",
+   "id": "6dfc2be3",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e4aef206",
+   "id": "08f789f8",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ac2f1316",
+   "id": "f95f1db4",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9989f195",
+   "id": "7e39751b",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2e0ec224",
+   "id": "b1296d24",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ec16c6d1",
+   "id": "05187e4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "19ef37d1",
+   "id": "328a1685",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "291ac092",
+   "id": "d84893d5",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "33fbc062",
+   "id": "801f4aed",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c97908cf",
+   "id": "e181d60d",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be1af911",
+   "id": "adbf0c17",
    "metadata": {},
    "source": [
     "**NOTE:**\n",
@@ -332,14 +334,6 @@
     "\n",
     "**The `n` can be any number. A 0-dimensional tensor is a scalar. A 1-dimensional tensor is a vector. A two dimensional tensor is a Matrix**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a58fb37",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
