edited tensor defn

--- a/01 - Fundamentals/code/01 - Tensorflow.ipynb
+++ b/01 - Fundamentals/code/01 - Tensorflow.ipynb
@@ -330,7 +330,7 @@
     "- Scalar: has zero (0) dimension. That is, it is a single number.\n",
     "- Vector: has one dimension. A number with direction (e.g wind speed and direction).\n",
     "- Matrix: has two dimension. It is a 2D array of numbers.\n",
-    "- Tensor: it is an `n-dimensional` array.\n",
+    "- Tensor: it is an `n-dimensional` array. It is collection of matrices.\n",
     "\n",
     "**The `n` can be any number. A 0-dimensional tensor is a scalar. A 1-dimensional tensor is a vector. A two dimensional tensor is a Matrix**"
    ]
