--- a/01 - Fundamentals/code/05 - Info from Tensor.ipynb
+++ b/01 - Fundamentals/code/05 - Info from Tensor.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4da0d80e",
+   "id": "611aacc9",
    "metadata": {},
    "source": [
     "# Getting Information from Tensor\n",
+    "<hr>\n",
     "\n",
     "Information like: `shape`, `rank`, `axis or dimension` `size`\n",
     "\n",
@@ -20,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6cf25dad",
+   "id": "b0e5ab2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ac5ceb33",
+   "id": "9bdccc51",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c37f01cb",
+   "id": "96f1d29a",
    "metadata": {},
    "outputs": [
     {
@@ -104,11 +105,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "22dea9d3",
+   "execution_count": 9,
+   "id": "287831d6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 4, 5), dtype=float32, numpy=\n",
+       "array([[[0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Axis of the tensor\n",
+    "rank_4_tensor[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "856ce765",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TensorShape([2, 3, 4, 5]), 4, <tf.Tensor: shape=(), dtype=int32, numpy=120>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rank_4_tensor.shape, rank_4_tensor.ndim, tf.size(rank_4_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "514ba447",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# under the hood `tf.size`\n",
+    "# it is the product of the shape\n",
+    "2 * 3 * 4 * 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c5401173",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Datatype of every element: <dtype: 'float32'>\n",
+      "Number of dimension (rank): 4\n",
+      "Shape of tensor: (2, 3, 4, 5)\n",
+      "Elements along the 0 axis: 2\n",
+      "Elements along the last axis: 5\n",
+      "Total number of elements in our tensor: 120\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get various attributes of tensor\n",
+    "attr = f\"\"\"\n",
+    "Datatype of every element: {rank_4_tensor.dtype}\n",
+    "Number of dimension (rank): {rank_4_tensor.ndim}\n",
+    "Shape of tensor: {rank_4_tensor.shape}\n",
+    "Elements along the 0 axis: {rank_4_tensor.shape[0]}\n",
+    "Elements along the last axis: {rank_4_tensor.shape[-1]}\n",
+    "Total number of elements in our tensor: {tf.size(rank_4_tensor)}\n",
+    "\"\"\"\n",
+    "print(attr)"
+   ]
   }
  ],
  "metadata": {
