--- a/01 - Fundamentals/code/07 - Tensor Operations.ipynb
+++ b/01 - Fundamentals/code/07 - Tensor Operations.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "614095f4",
+   "id": "afcc7cb9",
    "metadata": {},
    "source": [
     "# Basic Tensor Operations\n",
     "<hr>\n",
     "\n",
-    "`+` `-` `*` `/`"
+    "`+` `-` `*` `/` - Element-wise operation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3c626bc6",
+   "id": "7f1d1b66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5344db7c",
+   "id": "a845e00a",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "01278b81",
+   "id": "81f960ca",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fe03a95d",
+   "id": "3df7b6d7",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cfdbb2e",
+   "id": "581d3c51",
    "metadata": {},
    "source": [
     "`tf.math`"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "edac312b",
+   "id": "4515ba99",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "111d711f",
+   "id": "990bd100",
    "metadata": {},
    "outputs": [
     {
@@ -157,22 +157,341 @@
   },
   {
    "cell_type": "markdown",
-   "id": "845d8d35",
+   "id": "fb786efe",
    "metadata": {},
    "source": [
     "# Matrix Multiplication with Tensor\n",
     "<hr>\n",
     "\n",
-    "In machine learning, matrix multiplication is one of the most common tensor "
+    "In machine learning, matrix multiplication is one of the most common tensor operations.\n",
+    "\n",
+    "`tf.matmul`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cf0819a0",
+   "execution_count": 9,
+   "id": "0bbc5391",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       "array([[121,  98],\n",
+       "       [ 42,  37]])>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matrix multiplication \n",
+    "\n",
+    "tf.matmul(tensor,tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f161fc03",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = tf.constant([[1, 2, 5],[7, 2, 1], [3, 3, 3]])\n",
+    "b = tf.constant([[3, 5], [6, 7], [1, 8]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9ddc9794",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+       " array([[1, 2, 5],\n",
+       "        [7, 2, 1],\n",
+       "        [3, 3, 3]])>,\n",
+       " <tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       " array([[3, 5],\n",
+       "        [6, 7],\n",
+       "        [1, 8]])>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a,b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9d206752",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       "array([[20, 59],\n",
+       "       [34, 57],\n",
+       "       [30, 60]])>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matrix multiplication\n",
+    "\n",
+    "tf.matmul(a,b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76738f1f",
+   "metadata": {},
+   "source": [
+    "`@` operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "571ce16b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       "array([[20, 59],\n",
+       "       [34, 57],\n",
+       "       [30, 60]])>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# you can also use @ operation for matrix multiplication\n",
+    "\n",
+    "a@b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "396ac199",
+   "metadata": {},
+   "source": [
+    "### Tensor multiplication of incompatible size\n",
+    "\n",
+    "There are two rules our tensor needs to fulfill if we are going to matrix multiply.\n",
+    "\n",
+    "1. The **inner** dimension must match\n",
+    "2. The resulting matrix has the shape of the **outer** dimensions\n",
+    "\n",
+    "![rule](../images/matrix%20multiplication.JPG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "93de04c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       " array([[1, 2],\n",
+       "        [3, 4],\n",
+       "        [5, 6]])>,\n",
+       " <tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       " array([[ 7,  8],\n",
+       "        [ 9, 10],\n",
+       "        [11, 12]])>)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = tf.constant([[1, 2],[3, 4], [5, 6]])\n",
+    "Y = tf.constant([[7, 8],[9, 10],[11, 12]])\n",
+    "X,Y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16ed771a",
+   "metadata": {},
+   "source": [
+    "**Transpose Vs Reshape**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b2a01d53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+       "array([[ 23,  29,  35],\n",
+       "       [ 53,  67,  81],\n",
+       "       [ 83, 105, 127]])>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.matmul(X,Y, transpose_b=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d79ea3d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+       "array([[ 7,  8,  9],\n",
+       "       [10, 11, 12]])>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reshape(Y, shape=(2, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49d3278f",
+   "metadata": {},
+   "source": [
+    "**NOTE:**\n",
+    "- You can use `tf.transpose` \n",
+    "- Beware of reshaping your tensor\n",
+    "- Reshaping reshuffles the element the original tensor while transpose flip the axis.\n",
+    "- Make sure you use the transpose."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b003ea9",
+   "metadata": {},
+   "source": [
+    "## The dot product\n",
+    "\n",
+    "Matrix multiplication is also referred to the dot product.\n",
+    "\n",
+    "`tf.matmul()`, `tf.tensordot()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "35eef216",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       " array([[1, 2],\n",
+       "        [3, 4],\n",
+       "        [5, 6]])>,\n",
+       " <tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       " array([[ 7,  8],\n",
+       "        [ 9, 10],\n",
+       "        [11, 12]])>)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X,Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "75b9ea18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       "array([[ 89,  98],\n",
+       "       [116, 128]])>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# perform the dot product on X and Y\n",
+    "\n",
+    "tf.tensordot(tf.transpose(X),Y,axes=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "74274572",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+       "array([[ 23,  29,  35],\n",
+       "       [ 53,  67,  81],\n",
+       "       [ 83, 105, 127]])>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.tensordot(X,tf.transpose(Y),axes=1)"
+   ]
   }
  ],
  "metadata": {
