--- a/01 - Fundamentals/code/08 - Tensor Manipulation.ipynb
+++ b/01 - Fundamentals/code/08 - Tensor Manipulation.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6bcf2d45",
+   "id": "660964a5",
    "metadata": {},
    "source": [
     "# Tensor Manipulations\n",
     "<hr>\n",
     "\n",
     "- Change datatype of tensor\n",
-    "- Aggregating tensor"
+    "- Aggregating tensor\n",
+    "- Positional max and min\n",
+    "- Squeezing tensor"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "342c84e7",
+   "id": "06a14d89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b77eb1bd",
+   "id": "d2c47119",
    "metadata": {},
    "source": [
     "## Change datatype"
@@ -33,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "65274a11",
+   "id": "43ef5372",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f8008d42",
+   "id": "acc6ad73",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7264d59a",
+   "id": "abe7042e",
    "metadata": {},
    "source": [
     "`tf.cast()`"
@@ -90,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "750325bb",
+   "id": "2cc9ee00",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ca69d25b",
+   "id": "ac98da7e",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e6abdeb",
+   "id": "63d03132",
    "metadata": {},
    "source": [
     "## Aggregating tensors\n",
@@ -155,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "324accf5",
+   "id": "7f09b396",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9147ec68",
+   "id": "07b41dac",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8eee9236",
+   "id": "750f5df6",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b017dd29",
+   "id": "cc5533d1",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "315606b7",
+   "id": "5a1c61a6",
    "metadata": {},
    "source": [
     "`tf.reduce_min()`"
@@ -260,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7e28d986",
+   "id": "1d99de39",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471e5075",
+   "id": "4dcd6670",
    "metadata": {},
    "source": [
     "`tf.reduce_max()`"
@@ -291,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a706a0fa",
+   "id": "3d077ba8",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5db5ac10",
+   "id": "9323b22e",
    "metadata": {},
    "source": [
     "`tf.reduce_mean()`"
@@ -321,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1b11acfd",
+   "id": "ad7db76f",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93c65b1",
+   "id": "73225451",
    "metadata": {},
    "source": [
     "`tf.reduce_sum()`"
@@ -351,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e39dd446",
+   "id": "5c97c660",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b175a1e",
+   "id": "f2094522",
    "metadata": {},
    "source": [
     "**Note:** To find the standard deviation and variance, you may have to import `tensorflow_probability` as in:\n",
@@ -384,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f11b5ab7",
+   "id": "cfdfa976",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b87d9748",
+   "id": "e3a5a92b",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfc0ff04",
+   "id": "aa52302e",
    "metadata": {},
    "source": [
     "**N.B:** Without converting the dytpe from `int` to `float` it won't work!"
@@ -437,16 +439,318 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b47308d2",
+   "id": "da38c387",
    "metadata": {},
    "source": [
-    "## Positional Max and Min"
+    "## Positional Max and Min\n",
+    "\n",
+    "At what index the max or min occurs using `tf.argmax()` and `tf.argmin()` respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fc9b48ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(50,), dtype=float32, numpy=\n",
+       "array([0.6645621 , 0.44100678, 0.3528825 , 0.46448255, 0.03366041,\n",
+       "       0.68467236, 0.74011743, 0.8724445 , 0.22632635, 0.22319686,\n",
+       "       0.3103881 , 0.7223358 , 0.13318717, 0.5480639 , 0.5746088 ,\n",
+       "       0.8996835 , 0.00946367, 0.5212307 , 0.6345445 , 0.1993283 ,\n",
+       "       0.72942245, 0.54583454, 0.10756552, 0.6767061 , 0.6602763 ,\n",
+       "       0.33695042, 0.60141766, 0.21062577, 0.8527372 , 0.44062173,\n",
+       "       0.9485276 , 0.23752594, 0.81179297, 0.5263394 , 0.494308  ,\n",
+       "       0.21612847, 0.8457197 , 0.8718841 , 0.3083862 , 0.6868038 ,\n",
+       "       0.23764038, 0.7817228 , 0.9671384 , 0.06870162, 0.79873943,\n",
+       "       0.66028714, 0.5871513 , 0.16461694, 0.7381023 , 0.32054043],\n",
+       "      dtype=float32)>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.random.set_seed(42)\n",
+    "F = tf.random.uniform(shape=[50])\n",
+    "F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7516f733",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int64, numpy=42>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find the position at max\n",
+    "\n",
+    "tf.argmax(F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "4fb25d90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.9671384>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# index on the largest value\n",
+    "F[tf.argmax(F)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "166e1272",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.9671384>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reduce_max(F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2abd1ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check for equality\n",
+    "\n",
+    "assert F[tf.argmax(F)] == tf.reduce_max(F)\n",
+    "# if no error, it is equal otherwise, it is not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6d18480b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int64, numpy=16>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find the positional minimum\n",
+    "\n",
+    "tf.argmin(F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9f595913",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.009463668>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find minimum using positional mininum\n",
+    "\n",
+    "F[tf.argmin(F)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f176fbff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.009463668>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reduce_min(F)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "395e9cce",
+   "metadata": {},
+   "source": [
+    "## Squeezing tensor\n",
+    "\n",
+    "Removing dimension of size 1 from the shape of a tensor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "796fa148",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 1, 1, 1, 50), dtype=float32, numpy=\n",
+       "array([[[[[0.6645621 , 0.44100678, 0.3528825 , 0.46448255, 0.03366041,\n",
+       "           0.68467236, 0.74011743, 0.8724445 , 0.22632635, 0.22319686,\n",
+       "           0.3103881 , 0.7223358 , 0.13318717, 0.5480639 , 0.5746088 ,\n",
+       "           0.8996835 , 0.00946367, 0.5212307 , 0.6345445 , 0.1993283 ,\n",
+       "           0.72942245, 0.54583454, 0.10756552, 0.6767061 , 0.6602763 ,\n",
+       "           0.33695042, 0.60141766, 0.21062577, 0.8527372 , 0.44062173,\n",
+       "           0.9485276 , 0.23752594, 0.81179297, 0.5263394 , 0.494308  ,\n",
+       "           0.21612847, 0.8457197 , 0.8718841 , 0.3083862 , 0.6868038 ,\n",
+       "           0.23764038, 0.7817228 , 0.9671384 , 0.06870162, 0.79873943,\n",
+       "           0.66028714, 0.5871513 , 0.16461694, 0.7381023 , 0.32054043]]]]],\n",
+       "      dtype=float32)>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a tensor\n",
+    "tf.random.set_seed(42)\n",
+    "G = tf.constant(tf.random.uniform(shape=[50]), shape=(1,1,1,1,50))\n",
+    "G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "096aa27c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([1, 1, 1, 1, 50])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "af8d3295",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(50,), dtype=float32, numpy=\n",
+       "array([0.6645621 , 0.44100678, 0.3528825 , 0.46448255, 0.03366041,\n",
+       "       0.68467236, 0.74011743, 0.8724445 , 0.22632635, 0.22319686,\n",
+       "       0.3103881 , 0.7223358 , 0.13318717, 0.5480639 , 0.5746088 ,\n",
+       "       0.8996835 , 0.00946367, 0.5212307 , 0.6345445 , 0.1993283 ,\n",
+       "       0.72942245, 0.54583454, 0.10756552, 0.6767061 , 0.6602763 ,\n",
+       "       0.33695042, 0.60141766, 0.21062577, 0.8527372 , 0.44062173,\n",
+       "       0.9485276 , 0.23752594, 0.81179297, 0.5263394 , 0.494308  ,\n",
+       "       0.21612847, 0.8457197 , 0.8718841 , 0.3083862 , 0.6868038 ,\n",
+       "       0.23764038, 0.7817228 , 0.9671384 , 0.06870162, 0.79873943,\n",
+       "       0.66028714, 0.5871513 , 0.16461694, 0.7381023 , 0.32054043],\n",
+       "      dtype=float32)>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G_squeezed = tf.squeeze(G)\n",
+    "G_squeezed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c3bbec71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([50])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G_squeezed.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a14eeb6",
+   "id": "14beed18",
    "metadata": {},
    "outputs": [],
    "source": []
