one-hot encoding

--- a/01 - Fundamentals/code/08 - Tensor Manipulation.ipynb
+++ b/01 - Fundamentals/code/08 - Tensor Manipulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "660964a5",
+   "id": "f4e0af2c",
    "metadata": {},
    "source": [
     "# Tensor Manipulations\n",
@@ -11,13 +11,14 @@
     "- Change datatype of tensor\n",
     "- Aggregating tensor\n",
     "- Positional max and min\n",
-    "- Squeezing tensor"
+    "- Squeezing tensor\n",
+    "- One-hot encoding"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "06a14d89",
+   "id": "c509f5bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2c47119",
+   "id": "e6407396",
    "metadata": {},
    "source": [
     "## Change datatype"
@@ -35,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "43ef5372",
+   "id": "956397b4",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "acc6ad73",
+   "id": "9bfc8bee",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abe7042e",
+   "id": "53a3da1c",
    "metadata": {},
    "source": [
     "`tf.cast()`"
@@ -92,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2cc9ee00",
+   "id": "61d49f43",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ac98da7e",
+   "id": "3c0e3df7",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63d03132",
+   "id": "684668be",
    "metadata": {},
    "source": [
     "## Aggregating tensors\n",
@@ -157,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7f09b396",
+   "id": "ecfa14b8",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "07b41dac",
+   "id": "7bc3c8d1",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "750f5df6",
+   "id": "740fe0cd",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cc5533d1",
+   "id": "5908ac24",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a1c61a6",
+   "id": "a8d5bd86",
    "metadata": {},
    "source": [
     "`tf.reduce_min()`"
@@ -262,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1d99de39",
+   "id": "dbc740d4",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dcd6670",
+   "id": "20a96c51",
    "metadata": {},
    "source": [
     "`tf.reduce_max()`"
@@ -293,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3d077ba8",
+   "id": "0ff00878",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9323b22e",
+   "id": "c5fb372c",
    "metadata": {},
    "source": [
     "`tf.reduce_mean()`"
@@ -323,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ad7db76f",
+   "id": "008e251a",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73225451",
+   "id": "91c70a8a",
    "metadata": {},
    "source": [
     "`tf.reduce_sum()`"
@@ -353,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5c97c660",
+   "id": "d6567f0d",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2094522",
+   "id": "22d668aa",
    "metadata": {},
    "source": [
     "**Note:** To find the standard deviation and variance, you may have to import `tensorflow_probability` as in:\n",
@@ -386,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cfdfa976",
+   "id": "4b689b77",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e3a5a92b",
+   "id": "e1b29639",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa52302e",
+   "id": "fa3a5fc6",
    "metadata": {},
    "source": [
     "**N.B:** Without converting the dytpe from `int` to `float` it won't work!"
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da38c387",
+   "id": "e37838fe",
    "metadata": {},
    "source": [
     "## Positional Max and Min\n",
@@ -450,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "fc9b48ed",
+   "id": "c7ef6168",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "7516f733",
+   "id": "0604f176",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4fb25d90",
+   "id": "02267fe7",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "166e1272",
+   "id": "dbab54de",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "2abd1ca3",
+   "id": "b4ad21c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6d18480b",
+   "id": "a7c851e1",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "9f595913",
+   "id": "50b8a323",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f176fbff",
+   "id": "d2d0bfb4",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "395e9cce",
+   "id": "4e3e088a",
    "metadata": {},
    "source": [
     "## Squeezing tensor\n",
@@ -640,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "796fa148",
+   "id": "dcdc2661",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "096aa27c",
+   "id": "7a4ad1a8",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "af8d3295",
+   "id": "4374cff3",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c3bbec71",
+   "id": "ce40cc53",
    "metadata": {},
    "outputs": [
     {
@@ -748,9 +749,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "810c8bb8",
+   "metadata": {},
+   "source": [
+    "## One-Hot Encoding Tensor\n",
+    "\n",
+    "It is a form of numerical encoding."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "01fef02d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
+       "array([[1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create list of indices\n",
+    "some_list = [0, 1, 2, 3] # could be red, green, blue, purple\n",
+    "\n",
+    "# One hot encode our list of indices\n",
+    "tf.one_hot(some_list, depth=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "8dff4182",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4, 4), dtype=string, numpy=\n",
+       "array([[b'one', b'zero', b'zero', b'zero'],\n",
+       "       [b'zero', b'one', b'zero', b'zero'],\n",
+       "       [b'zero', b'zero', b'one', b'zero'],\n",
+       "       [b'zero', b'zero', b'zero', b'one']], dtype=object)>"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# specify custom value for one hot encoding\n",
+    "\n",
+    "tf.one_hot(some_list,depth=4,on_value='one', off_value='zero')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14beed18",
+   "id": "92f655dc",
    "metadata": {},
    "outputs": [],
    "source": []
