--- a/01 - Fundamentals/code/08 - Tensor Manipulation.ipynb
+++ b/01 - Fundamentals/code/08 - Tensor Manipulation.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f4e0af2c",
+   "id": "ea4755bf",
    "metadata": {},
    "source": [
     "# Tensor Manipulations\n",
     "<hr>\n",
     "\n",
-    "- Change datatype of tensor\n",
-    "- Aggregating tensor\n",
-    "- Positional max and min\n",
-    "- Squeezing tensor\n",
-    "- One-hot encoding"
+    "- <a href=\"#dtype\">Change datatype of tensor</a>\n",
+    "- <a href=\"#aggregate\">Aggregating tensor</a>\n",
+    "- <a href=\"#position\">Positional max and min</a>\n",
+    "- <a href=\"#squeeze\">Squeezing tensor</a>\n",
+    "- <a href=\"#one-hot\">One-hot encoding</a>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c509f5bd",
+   "id": "cc0b6137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6407396",
+   "id": "b020a6a0",
    "metadata": {},
    "source": [
-    "## Change datatype"
+    "## Change datatype\n",
+    "<div id='dtype'></div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "956397b4",
+   "id": "3b4484a5",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9bfc8bee",
+   "id": "e81e7c54",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53a3da1c",
+   "id": "52066d53",
    "metadata": {},
    "source": [
     "`tf.cast()`"
@@ -93,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "61d49f43",
+   "id": "25b328d8",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3c0e3df7",
+   "id": "179f5151",
    "metadata": {},
    "outputs": [
     {
@@ -142,10 +143,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "684668be",
+   "id": "e3ed199c",
    "metadata": {},
    "source": [
     "## Aggregating tensors\n",
+    "<div id='aggregate'></div>\n",
     "\n",
     "Aggregating tensors = condensing them from multiple values down to smaller amount of values\n",
     "\n",
@@ -158,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ecfa14b8",
+   "id": "09979b7b",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7bc3c8d1",
+   "id": "005d5642",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "740fe0cd",
+   "id": "f0d354fe",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5908ac24",
+   "id": "6ea0adfe",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8d5bd86",
+   "id": "3016094e",
    "metadata": {},
    "source": [
     "`tf.reduce_min()`"
@@ -263,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dbc740d4",
+   "id": "59e618b1",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a96c51",
+   "id": "ade7cf05",
    "metadata": {},
    "source": [
     "`tf.reduce_max()`"
@@ -294,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0ff00878",
+   "id": "c97f47b9",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5fb372c",
+   "id": "b5b3dd90",
    "metadata": {},
    "source": [
     "`tf.reduce_mean()`"
@@ -324,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "008e251a",
+   "id": "69ae5a04",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91c70a8a",
+   "id": "018f53f1",
    "metadata": {},
    "source": [
     "`tf.reduce_sum()`"
@@ -354,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d6567f0d",
+   "id": "a15746fa",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22d668aa",
+   "id": "7dc3f514",
    "metadata": {},
    "source": [
     "**Note:** To find the standard deviation and variance, you may have to import `tensorflow_probability` as in:\n",
@@ -387,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4b689b77",
+   "id": "2204ca22",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e1b29639",
+   "id": "dbe63ff5",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa3a5fc6",
+   "id": "0383ebae",
    "metadata": {},
    "source": [
     "**N.B:** Without converting the dytpe from `int` to `float` it won't work!"
@@ -440,9 +442,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e37838fe",
+   "id": "bf4705e7",
    "metadata": {},
    "source": [
+    "<div id='position'></div>\n",
+    "\n",
     "## Positional Max and Min\n",
     "\n",
     "At what index the max or min occurs using `tf.argmax()` and `tf.argmin()` respectively."
@@ -451,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c7ef6168",
+   "id": "7d1b5bdc",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0604f176",
+   "id": "d331381d",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "02267fe7",
+   "id": "d016bdd0",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "dbab54de",
+   "id": "cbe413e6",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b4ad21c6",
+   "id": "95204b2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a7c851e1",
+   "id": "dba0ffda",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "50b8a323",
+   "id": "7d6d36fa",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d2d0bfb4",
+   "id": "e6d68fcb",
    "metadata": {},
    "outputs": [
     {
@@ -630,9 +634,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e3e088a",
+   "id": "4da902cf",
    "metadata": {},
    "source": [
+    "<div id='squeeze'></div>\n",
+    "\n",
     "## Squeezing tensor\n",
     "\n",
     "Removing dimension of size 1 from the shape of a tensor."
@@ -641,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "dcdc2661",
+   "id": "234a3ba0",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7a4ad1a8",
+   "id": "32ece711",
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4374cff3",
+   "id": "b2bcf343",
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ce40cc53",
+   "id": "c311e13d",
    "metadata": {},
    "outputs": [
     {
@@ -750,9 +756,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "810c8bb8",
+   "id": "0698f780",
    "metadata": {},
    "source": [
+    "<div id='one-hot'></div>\n",
+    "\n",
     "## One-Hot Encoding Tensor\n",
     "\n",
     "It is a form of numerical encoding."
@@ -761,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "01fef02d",
+   "id": "f46e7ae4",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8dff4182",
+   "id": "c8109258",
    "metadata": {},
    "outputs": [
     {
@@ -813,14 +821,6 @@
     "\n",
     "tf.one_hot(some_list,depth=4,on_value='one', off_value='zero')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92f655dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
