--- a/01 - Fundamentals/code/08 - Tensor Manipulation.ipynb
+++ b/01 - Fundamentals/code/08 - Tensor Manipulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea4755bf",
+   "id": "581f9b65",
    "metadata": {},
    "source": [
     "# Tensor Manipulations\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cc0b6137",
+   "id": "32079044",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b020a6a0",
+   "id": "209c35f9",
    "metadata": {},
    "source": [
+    "<div id='dtype'></div>\n",
+    "\n",
     "## Change datatype\n",
-    "<div id='dtype'></div>"
+    "`tf.cast()`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3b4484a5",
+   "id": "4addf617",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e81e7c54",
+   "id": "6364e9a5",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52066d53",
+   "id": "d3002b06",
    "metadata": {},
    "source": [
     "`tf.cast()`"
@@ -94,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "25b328d8",
+   "id": "28191d20",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "179f5151",
+   "id": "cc8e528e",
    "metadata": {},
    "outputs": [
     {
@@ -143,11 +145,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3ed199c",
+   "id": "bd672510",
    "metadata": {},
    "source": [
-    "## Aggregating tensors\n",
     "<div id='aggregate'></div>\n",
+    "\n",
+    "## Aggregating tensors\n",
     "\n",
     "Aggregating tensors = condensing them from multiple values down to smaller amount of values\n",
     "\n",
@@ -160,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "09979b7b",
+   "id": "ad6d57ce",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "005d5642",
+   "id": "2416359b",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f0d354fe",
+   "id": "e1603f67",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6ea0adfe",
+   "id": "4a8782ca",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3016094e",
+   "id": "189120eb",
    "metadata": {},
    "source": [
     "`tf.reduce_min()`"
@@ -265,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "59e618b1",
+   "id": "f59b33d6",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ade7cf05",
+   "id": "9064a037",
    "metadata": {},
    "source": [
     "`tf.reduce_max()`"
@@ -296,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c97f47b9",
+   "id": "80935226",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b3dd90",
+   "id": "a0eba072",
    "metadata": {},
    "source": [
     "`tf.reduce_mean()`"
@@ -326,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "69ae5a04",
+   "id": "221e6c28",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018f53f1",
+   "id": "ddedb51e",
    "metadata": {},
    "source": [
     "`tf.reduce_sum()`"
@@ -356,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a15746fa",
+   "id": "92b21187",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dc3f514",
+   "id": "80b865d5",
    "metadata": {},
    "source": [
     "**Note:** To find the standard deviation and variance, you may have to import `tensorflow_probability` as in:\n",
@@ -389,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2204ca22",
+   "id": "24cd778d",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "dbe63ff5",
+   "id": "cfc1b947",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0383ebae",
+   "id": "fed76858",
    "metadata": {},
    "source": [
     "**N.B:** Without converting the dytpe from `int` to `float` it won't work!"
@@ -442,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf4705e7",
+   "id": "f4fefa56",
    "metadata": {},
    "source": [
     "<div id='position'></div>\n",
@@ -455,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7d1b5bdc",
+   "id": "d25ff36a",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d331381d",
+   "id": "1f91d58c",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d016bdd0",
+   "id": "cd8797a5",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "cbe413e6",
+   "id": "f35d2fdc",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "95204b2c",
+   "id": "5c3661b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "dba0ffda",
+   "id": "c5ecff53",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7d6d36fa",
+   "id": "ffa9e989",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e6d68fcb",
+   "id": "dc7287e6",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da902cf",
+   "id": "64aad935",
    "metadata": {},
    "source": [
     "<div id='squeeze'></div>\n",
@@ -647,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "234a3ba0",
+   "id": "09a56218",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "32ece711",
+   "id": "90b8e466",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b2bcf343",
+   "id": "813b840f",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c311e13d",
+   "id": "49d47ce8",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0698f780",
+   "id": "b6e34526",
    "metadata": {},
    "source": [
     "<div id='one-hot'></div>\n",
@@ -769,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f46e7ae4",
+   "id": "d2fb1536",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "c8109258",
+   "id": "f162639b",
    "metadata": {},
    "outputs": [
     {
