--- a/01 - Fundamentals/code/09 - Tensor VS Numpy.ipynb
+++ b/01 - Fundamentals/code/09 - Tensor VS Numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1cd661fc",
+   "id": "cec47e59",
    "metadata": {},
    "source": [
     "# Tensor and Numpy Compatibility"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c008386c",
+   "id": "1c23a308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c8b2c652",
+   "id": "9e6cb8e2",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9c55d045",
+   "id": "7e9b393f",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "af90edda",
+   "id": "13b02719",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7e19ef0d",
+   "id": "dafb3ebd",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58bb371f",
+   "id": "86c3accd",
    "metadata": {},
    "source": [
     "**Note:** One of the main difference between a TensorFlow tensor and a NumPy array is that a Tensorflow tensor has the datatype of **32-bits** compared to Numpy which has **64-bits**. Hence, TensorFlow tensor has faster numerical processing."
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e74d5e23",
+   "id": "d76fcb97",
    "metadata": {},
    "source": [
     "## Access to GPU"
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "86707b59",
+   "id": "3aed4c05",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a5427b5e",
+   "id": "ba8bb2b1",
    "metadata": {},
    "outputs": [
     {
@@ -175,19 +175,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abca91ec",
+   "id": "f6eb1b2b",
    "metadata": {},
    "source": [
-    "Since the output about is an empty list, that means no GPU is found. You can access GPU on `Google Colab`"
+    "Since the output about is an empty list, that means no GPU is found. You can access GPU on `Google Colab`\n",
+    "- Go to `runtime` on google colab\n",
+    "- Select GPU"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab7f5ba3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
