--- a/02 - Neural Network Regression/code/02 - Improving NN Regression.ipynb
+++ b/02 - Neural Network Regression/code/02 - Improving NN Regression.ipynb
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7e1e6d3e",
+   "id": "35e927ab",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e65086c",
+   "id": "9c656a70",
    "metadata": {},
    "source": [
     "<div id=\"how\"></div>\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e577a9e",
+   "id": "90b8d2c8",
    "metadata": {},
    "source": [
     "### Improve it by increasing the epochs"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "369ed8cf",
+   "id": "5f9a5563",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "83ba0580",
+   "id": "473ca11d",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f15707de",
+   "id": "c025ea61",
    "metadata": {},
    "source": [
     "### Improve the model by changing the optimizer"
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a812fa67",
+   "id": "644ecfee",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ce315f67",
+   "id": "05515a6f",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cdc82a6",
+   "id": "0f3c3dfb",
    "metadata": {},
    "source": [
     "### Improve the model by adding extra hidden layer\n"
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a9629dc3",
+   "id": "1665c8e3",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "cfecff0e",
+   "id": "760e0006",
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10cebe02",
+   "id": "9361453b",
    "metadata": {},
    "source": [
     "### Improving by Adding hidden layer and decreasing neuron"
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "50d75293",
+   "id": "3d16e64d",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "21283ae9",
+   "id": "48819698",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9856c062",
+   "id": "a2ecf4f6",
    "metadata": {},
    "source": [
     "### Improving by adding layer & changing the learning rate (0.01)"
@@ -1328,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "4f39d649",
+   "id": "1264e579",
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1574,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "502e8bcb",
+   "id": "95693fc7",
    "metadata": {},
    "outputs": [
     {
@@ -1601,12 +1601,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f348a3f0",
+   "cell_type": "markdown",
+   "id": "e8299a1c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Next Topic: Evaluate a model. Click <a href=\"./03 - Evaluating a model.ipynb\">here</a>"
+   ]
   }
  ],
  "metadata": {
